Fix z-index on form toggle and tabzilla

--- a/media/css/firefox/partners/desktop.less
+++ b/media/css/firefox/partners/desktop.less
@@ -19,6 +19,11 @@
 
 #masthead {
     margin-bottom: -64px;
+    z-index: 200;
+}
+
+#tabzilla-panel {
+    z-index: 1100;
 }
 
 #article-wrapper {
@@ -412,7 +417,7 @@ h2 {
     position: fixed;
     top: 70px;
     right: 20px;
-    z-index: 100;
+    z-index: 200;
     border-radius: 3px;
     .transition(right linear 0.3s);
     &.form-open {
